--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <div>
         <button type="button" onclick="getPosition()">取得位址</button>
         <button type="button" onclick="scanQRCode()">掃碼</button>
+        <button type="button" onclick="scanQRCodeV2()">掃碼V2</button>
     </div>
 </body>
 <script>
@@ -41,6 +42,16 @@
     function scanQRCode() {
         if (liff.scanCode) {
             liff.scanCode().then(result => {
+                alert(JSON.stringify(result));
+            });
+        } else {
+            alert("Scan QR Code is not supported by this browser.");
+        }
+    }
+
+    function scanQRCodeV2() {
+        if (liff.scanCode) {
+            liff.scanCodeV2().then(result => {
                 alert(JSON.stringify(result));
             });
         } else {
